--- a/Faq.html
+++ b/Faq.html
@@ -11,7 +11,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
   </head>
   <body>
-
   <!--Menu-->
   <div>
     <div class="columns is-grouped-multiline"> </div>
@@ -34,9 +33,13 @@
             </a>
             <a class="navbar-item" href="Cennik.html">
               Cennik
-              </a>
-              <a class="navbar-item" href="Faq.html">
+            </a>
+            <a class="navbar-item" href="Faq.html">
               FAQ
+            </a>
+            <a class="navbar-item" href="sklep.html">
+              Sklep VearMe
+            </a>
           </div>
 
           <div class="navbar-end is-flex is-flex-direction-column-mobile">
@@ -250,6 +253,7 @@
               <li class="mr-4"><a class="button is-white" href="JakToDziala.html">Działanie</a></li>
               <li class="mr-4"><a class="button is-white" href="Cennik.html">Cennik</a></li>
               <li class="mr-4"><a class="button is-white" href="Faq.html">FAQ</a></li>
+              <li class="mr-4"><a class="button is-white" href="sklep.html">Sklep VearMe</a></li>
             </ul>
           </div>
         </div>
@@ -257,7 +261,7 @@
     <div class="pt-5" style="border-top: 1px solid #dee2e6;"></div>
     <div class="container">
       <div class="is-justify-content-between is-align-items-center has-text-centered">
-        <p>© 2024 Julia Fidecka - DressIT | Wszystkie prawa zastrzeżone</p>
+        <p>© 2025 Julia Fidecka i Katarzyna Adamska - DressIT | Wszystkie prawa zastrzeżone</p>
         <div class="py-2"></div>
         <div class="ml-auto">
           <a class="mr-4 is-inline-block" href="https://www.facebook.com" target="_blank">
