--- a/DressIT.html
+++ b/DressIT.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="decription" content="Strona DressIT - Zwiększ sprzedaż, popraw prezentację produktów i przyciągnij więcej klientów dzięki naszej zaawansowanej technologii.">
         <meta name="keywords" content="strona internetowa, DressIT, sztuczna inteligencja, AI, zdjęcia, sprzedaż">
-        <meta name="author" content="Julia Fidecka">
+        <meta name="author" content="Julia Fidecka i Katarzyna Adamska">
         <title>DressIT</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
