--- a/Faq.html
+++ b/Faq.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="decription" content="Strona zawierająca najczęstsze pytania i odpowiedzi ">
         <meta name="keywords" content="aplikacja, strona internetowa, FAQ, pytania i odpowiedzi">
-        <meta name="author" content="Julia Fidecka">
+        <meta name="author" content="Julia Fidecka i Katarzyna Adamska">
         <title>DressIT-FAQ</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
