--- a/JakToDziala.html
+++ b/JakToDziala.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="decription" content="Strona zawierająca informacje jak działa aplikacja DressIT">
     <meta name="keywords" content="aplikacja, strona internetowa, informacje o działaniu aplikacji, funkcje aplikacji">
-    <meta name="author" content="Julia Fidecka">
+    <meta name="author" content="Julia Fidecka i Katarzyna Adamska">
     <title>DressIT-działanie</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
