--- a/sklep.html
+++ b/sklep.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="pl">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="decription" content="Strona DressIT - Zwiększ sprzedaż, popraw prezentację produktów i przyciągnij więcej klientów dzięki naszej zaawansowanej technologii.">
-        <meta name="keywords" content="strona internetowa, DressIT, sztuczna inteligencja, AI, zdjęcia, sprzedaż">
-        <meta name="author" content="Julia Fidecka">
-        <title>VearMe</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-        <style>
-            .video-container {
-            position: relative;
-            width: 100%;
-            height: 50vh;
-            overflow: hidden;
-            
-            }
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="VearMe – Twój sklep online z najnowszymi trendami w modzie. Oferujemy odzież, stylowe obuwie, eleganckie torebki oraz modne akcesoria, które dopełnią każdą stylizację. Odkryj wyjątkowe kolekcje już dziś!">
+      <meta name="keywords" content="odzież, obuwie, torebki, akcesoria, moda, sklep internetowy, VearMe">
+      <meta name="author" content="Julia Fidecka, Katarzyna Adamska">
+      <title>VearMe – Twój styl, Twoje zasady</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+      <style>
+          .video-container {
+          position: relative;
+          width: 100%;
+          height: 50vh;
+          overflow: hidden;
+          
+          }
 
-            .video-container video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            }
+          .video-container video {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          position: absolute;
+          top: 0;
+          left: 0;
+          }
 
-            .overlay {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            z-index: 2;
-            }
+          .overlay {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          text-align: center;
+          z-index: 2;
+          }
 
-            .overlay h1 {
-            font-size: 4rem;
-            }
+          .overlay h1 {
+          font-size: 4rem;
+          }
 
-            .overlay p {
-            font-size: 1.5rem;
-            }
-        </style>
+          .overlay p {
+          font-size: 1.5rem;
+          }
+      </style>
   </head>
   <body>
 
@@ -64,13 +64,13 @@
       </div>
       <div id="navbarMenu" class="navbar-menu is-size-6 has-text-weight-bold">
           <div class="navbar-start">
-            <a class="navbar-item" href="JakToDziala.html">
+            <a class="navbar-item" href="Oferta.html">
               Oferta
             </a>
-            <a class="navbar-item" href="Cennik.html">
+            <a class="navbar-item" href="Kontakt_VearMe.html">
               Kontakt
               </a>
-              <a class="navbar-item" href="Faq.html">
+              <a class="navbar-item" href="Onas.html">
               O nas
           </div>
 
@@ -83,7 +83,7 @@
                   </span>
                   <strong>Konto</strong>
                 </a>
-                <a class="button is-link" href="konto.html">
+                <a class="button is-link" href="koszyk.html">
                   <span class="icon is-small is-left">
                     <i class="fas fa-shopping-cart"></i>
                   </span>
@@ -179,9 +179,9 @@
         <div class="pb-5 is-flex is-flex-wrap-wrap is-justify-content-between is-justify-content-right">
           <div>
             <ul class="is-flex is-flex-wrap-wrap is-align-items-center">
-              <li class="mr-4"><a class="button is-white" href="JakToDziala.html">Oferta</a></li>
-              <li class="mr-4"><a class="button is-white" href="Cennik.html">Kontakt</a></li>
-              <li class="mr-4"><a class="button is-white" href="Faq.html">O nas</a></li>
+              <li class="mr-4"><a class="button is-white" href="Oferta.html">Oferta</a></li>
+              <li class="mr-4"><a class="button is-white" href="kontaktVearMe.html">Kontakt</a></li>
+              <li class="mr-4"><a class="button is-white" href="Onas.html">O nas</a></li>
             </ul>
           </div>
         </div>
