--- a/Cennik.html
+++ b/Cennik.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="decription" content="Strona zawierająca cennik aplikacji ">
         <meta name="keywords" content="aplikacja, strona internetowa, cennik usługi">
-        <meta name="author" content="Julia Fidecka">
+        <meta name="author" content="Julia Fidecka i Katarzyna Adamska">
         <title>DressIT-cennik</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <style>
