Dodano podstrony - kontakt, oferta, o nas

--- a/sklep.html
+++ b/sklep.html
@@ -52,7 +52,7 @@
     <div class="columns is-grouped-multiline"> </div>
     <nav class="navbar navigation is-sticky-top has-background-link-light is-spaced" role="navigation" aria-label="main navigation"> 
       <div class="navbar-brand">
-          <a class="navbar-item has-text-weight-bold is-size-4 mr-6" href="index.html">
+          <a class="navbar-item has-text-weight-bold is-size-4 mr-6" href="sklep.html">
             VearMe
           </a>
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
@@ -67,7 +67,7 @@
             <a class="navbar-item" href="Oferta.html">
               Oferta
             </a>
-            <a class="navbar-item" href="Kontakt_VearMe.html">
+            <a class="navbar-item" href="kontaktVearMe.html">
               Kontakt
               </a>
               <a class="navbar-item" href="Onas.html">
@@ -106,7 +106,7 @@
       </video>
       <div class="overlay">
         <h1 class="title is-1 has-text-grey-dark">Nowość</h1>
-        <p class="subtitle has-text-grey">Przejdź do naszej nowej aplikacji mobilnej DressIT</p>
+        <p class="subtitle has-text-grey">Przejdź do naszej nowej aplikacji mobilnej <b>DressIT</b></p>
         
     <!--Przycisk Sprawdź aplikację--->
         <a class="button is-white" href="DressIT.html">
