Dodano treść do podstrony oferta

--- a/Oferta.html
+++ b/Oferta.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     </head>
 <body>
-    
+
 <!--Menu-->
   <div>
     <div class="columns is-grouped-multiline"> </div>
@@ -60,6 +60,27 @@
       </div>
     </nav>
   </div>
+
+  <!------Alignment ------->
+<nav class="breadcrumb is-centered has-text-black" aria-label="breadcrumbs">
+    <ul>
+      <li><a href="sklep.html" id="vearme">VearMe</a></li>
+      <li><a href="#" id="click">Oferta</a></li>
+    </ul>
+  </nav>
+
+  <!--Kategorie produktów-->
+  <div class="container is-mobile">
+    <aside class="menu">
+      <p class="menu-label">Kategoria</p>
+      <ul class="menu-list">
+        <li><a id="torebki">Torebki</a></li>
+        <li><a>Akcesoria</a></li>
+        <li><a>Odzież</a></li>
+        <li><a>Obuwie</a></li>
+      </ul>
+    </aside>
+  
 
   <!--Footer-->
   <footer class="section">
