--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,7 @@
     <div class="columns is-grouped-multiline"> </div>
     <nav class="navbar navigation is-sticky-top has-background-link-light is-spaced" role="navigation" aria-label="main navigation"> 
       <div class="navbar-brand">
-          <a class="navbar-item has-text-weight-bold is-size-4 mr-6" href="index.html">
+          <a class="navbar-item has-text-weight-bold is-size-4 mr-6" href="DressIT.html">
             DressIT
           </a>
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
