Dodanie alert do zakładki Konto

--- a/Onas.html
+++ b/Onas.html
@@ -84,7 +84,7 @@
           <div class="navbar-end is-flex is-flex-direction-column-mobile">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-link" href="konto.html">
+                <a class="button is-link" id="zakladka-konto">
                   <span class="icon is-small is-left">
                     <i class="fas fa-user"></i>
                   </span>
@@ -247,7 +247,12 @@
   </footer>
 
 <!---toggles the class is-active on both the navbar-burger and the targeted navbar-menu-->
-  <script src="toggle.js"></script>
+  <script src="toggle.js">
+      //Dodanie alertu o niedziałającej zakładce konto
+      document.getElementById('zakladka-konto').addEventListener('click',function(){
+      alert("Zakładka jest jeszcze niedostępna");
+    });
+  </script>
 
 </body>
 </html>
