--- a/JakToDziala.html
+++ b/JakToDziala.html
@@ -9,6 +9,7 @@
     <title>DressIT-działanie</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    <link rel="icon" href="assets/DressIT.png" type="obraz/typ ikony">
     <style>
       .hero{
         background-color: rgb(224, 224, 247);
