Dodanie logo strony w <head>

--- a/Cennik.html
+++ b/Cennik.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Julia Fidecka i Katarzyna Adamska">
         <title>DressIT-cennik</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+        <link rel="icon" href="assets/DressIT.png" type="obraz/typ ikony">
         <style>
             thead {
                 background-color:lightblue;
