Dodanie logo strony w <head>

--- a/Faq.html
+++ b/Faq.html
@@ -9,6 +9,7 @@
         <title>DressIT-FAQ</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+        <link rel="icon" href="assets/DressIT.png" type="obraz/typ ikony">
   </head>
   <body>
   <!--Menu-->
