--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
         <title>DressIT-kontakt</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-        <link rel="icon" href="assets/VearMe.png" type="obraz/typ ikony">
+        <link rel="icon" href="assets/DressIT.png" type="obraz/typ ikony">
   </head>
 <body>
 
