Poprawiono JS zakładki konto

--- a/Onas.html
+++ b/Onas.html
@@ -249,11 +249,13 @@
 
 <!---toggles the class is-active on both the navbar-burger and the targeted navbar-menu-->
   <script src="toggle.js">
+  </script>
+    <script>
       //Dodanie alertu o niedziałającej zakładce konto
       document.getElementById('zakladka-konto').addEventListener('click',function(){
       alert("Zakładka jest jeszcze niedostępna");
     });
-  </script>
+    </script>
 
 </body>
 </html>
