Animacja przycisków App Store i Google Play

--- a/DressIT.html
+++ b/DressIT.html
@@ -10,6 +10,16 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
         <link rel="icon" href="assets/DressIT.png" type="obraz/typ ikony">
+         <style>
+          .apka:hover{
+            transform: scale(1.2); 
+            cursor: pointer;
+          }
+
+          .apka {
+            transition: transform 0.3s ease;
+          }
+        </style>
   </head>
   <body>
 
@@ -85,10 +95,10 @@
           </p>
           <div class="buttons is-centered">
             <a class="mr-3" href="https://www.apple.com/pl/app-store/" target="_blank">
-              <img src="assets/Download_on_the_App_Store_Badge_PL_RGB_blk_100317.svg">
+              <img src="assets/Download_on_the_App_Store_Badge_PL_RGB_blk_100317.svg" class="apka">
             </a>
             <a href="https://play.google.com/store/games?hl=pl" target="_blank">
-              <img src="assets/google-play-logo.svg">
+              <img src="assets/google-play-logo.svg" class="apka">
             </a>
           </div>
         </div>
