--- a/JakToDziala.html
+++ b/JakToDziala.html
@@ -13,13 +13,50 @@
     <style>
       .hero{
         background-color: rgb(224, 224, 247);
+        margin-top:0px;
       }
       .card{
-        height: 100%;
         display:flex;
         flex-direction: column;
         background-color: rgb(216, 233, 245);
       }
+
+      /* animacja tytułu */
+      #tytul{
+        opacity: 0;
+        animation: fadeInOut 3s ease-in-out infinite; 
+      }
+
+      @keyframes fadeInOut {
+          0% {
+            opacity: 0;
+          }
+          50% {
+            opacity: 1; 
+          }
+          100% {
+            opacity: 0; 
+          }
+        }
+
+        /* Style bloków krok po kroku */
+        #sprawdz:hover {
+          background-color: #b9d1db; 
+          transform: scale(1.1); 
+        }
+
+        #sprawdz {
+        transition: transform 0.3s ease;
+        }
+        .cell {
+          margin-left: 30px;
+        }
+
+        @media (max-width: 768px) {
+          .cell {
+            margin-left: 15px;
+          }
+        }
     </style>
   </head>
   <body>
@@ -67,13 +104,11 @@
     </nav>
   </div>
 
-  <div class="pb-4"></div>
-
   <!-- Sekcja nagłówka -->
   <section class="hero">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title">
+        <h1 class="title" id="tytul">
           Jak działa DressIT?
         </h1>
         <h2 class="subtitle mt-5">
@@ -84,118 +119,117 @@
   </section>
 
   <!-- Główna sekcja strony -->
-  <section class="section">
-    <div class="container">
-      <div class="content has-text-centered">
-        <h2 class="section-title title is-3">Krok po kroku</h2>
-      </div>
+<section class="section">
+  <div class="container">
+    <div class="content has-text-centered">
+      <h2 class="section-title title is-3">Krok po kroku</h2>
+    </div>
 
-      <div class="fixed-grid has-3-cols has-1-cols-mobile has-2-cols-tablet">
-        <div class="grid">
-
-          <div class="cell">
-            <div class="card">
-              <div class="card-content">
-                <p class="title is-4">
-                  <span class="icon">
-                    <i class="fas fa-user"></i>
-                  </span>
-                  1. Utwórz Konto
-                  </p>
-                  <p>
-                    Zarejestruj się w aplikacji DressIT, aby uzyskać dostęp do wszystkich funkcji. Wystarczy kilka prostych kroków!
-                  </p>
-              </div>
+    <div class="fixed-grid has-3-cols has-1-cols-mobile has-2-cols-tablet">
+      <div class="grid">
+        <div class="cell" style="margin-bottom: 30px;"> 
+          <div class="card">
+            <div class="card-content" id="sprawdz">
+              <p class="title is-4">
+                <span class="icon">
+                  <i class="fas fa-user"></i>
+                </span>
+                1. Utwórz Konto
+              </p>
+              <p>
+                Zarejestruj się w aplikacji DressIT, aby uzyskać dostęp do wszystkich funkcji. Wystarczy kilka prostych kroków!
+              </p>
             </div>
           </div>
-
-          <div class="cell">
-            <div class="card">
-                <div class="card-content">
-                    <p class="title is-4">
-                        <span class="icon">
-                            <i class="fas fa-camera"></i>
-                        </span>
-                        2. Dodaj Zdjęcie Ubrania
-                    </p>
-                    <p>
-                        Wybierz zdjęcie ubrania, które chcesz sprzedać lub wypróbować. Możesz dodać zdjęcie bezpośrednio z telefonu lub komputera.
-                    </p>
-                </div>
-            </div>
-          </div>
-
-          <div class="cell">
-            <div class="card">
-              <div class="card-content">
-                  <p class="title is-4">
-                      <span class="icon">
-                          <i class="fas fa-male"></i>
-                      </span>
-                      3. Wybierz Modela/Modelkę
-                  </p>
-                  <p>
-                      Wybierz sylwetkę modela lub modelki, na której chcesz wypróbować ubranie. Możesz dostosować wygląd modela do swoich preferencji.
-                  </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="cell">
-            <div class="card">
-                <div class="card-content">
-                    <p class="title is-4">
-                        <span class="icon">
-                            <i class="fas fa-edit"></i>
-                        </span>
-                        4. Dopasuj Ubranie
-                    </p>
-                    <p>
-                        Dzięki naszej technologii sztucznej inteligencji, ubranie zostanie automatycznie dopasowane do wybranego modela. Możesz także edytować i dostosować położenie.
-                    </p>
-                </div>
-            </div>
-          </div>
-
-          <div class="cell">
-            <div class="card">
-              <div class="card-content">
-                  <p class="title is-4">
-                      <span class="icon">
-                          <i class="fas fa-share-alt"></i>
-                      </span>
-                      5. Podziel się Efektem
-                  </p>
-                  <p>
-                      Gdy jesteś zadowolony z efektu, możesz podzielić się zdjęciem w mediach społecznościowych lub pobrać je na swoje urządzenie.
-                  </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="cell">
-            <div class="card">
-              <div class="card-content">
-                  <p class="title is-4">
-                      <span class="icon">
-                          <i class="fas fa-shopping-cart"></i>
-                      </span>
-                      6. Wystaw na Vinted
-                  </p>
-                  <p>
-                      Jeżeli Twoje ubranie wygląda idealnie na modelu, przejdź na Vinted i wystaw je na sprzedaż bezpośrednio z aplikacji DressIT.
-                  </p>
-              </div>
-            </div>
-          </div>
-
         </div>
+
+        <div class="cell" style="margin-bottom: 30px;"> 
+          <div class="card">
+            <div class="card-content" id="sprawdz">
+              <p class="title is-4">
+                <span class="icon">
+                  <i class="fas fa-camera"></i>
+                </span>
+                2. Dodaj Zdjęcie Ubrania
+              </p>
+              <p>
+                Wybierz zdjęcie ubrania, które chcesz sprzedać lub wypróbować. Możesz dodać zdjęcie bezpośrednio z telefonu lub komputera.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="cell" style="margin-bottom: 30px;"> 
+          <div class="card">
+            <div class="card-content" id="sprawdz" >
+              <p class="title is-4">
+                <span class="icon">
+                  <i class="fas fa-male"></i>
+                </span>
+                3. Wybierz Modela/Modelkę
+              </p>
+              <p>
+                Wybierz sylwetkę modela lub modelki, na której chcesz wypróbować ubranie. Możesz dostosować wygląd modela do swoich preferencji.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="cell" style="margin-bottom: 30px;"> 
+          <div class="card">
+            <div class="card-content" id="sprawdz">
+              <p class="title is-4">
+                <span class="icon">
+                  <i class="fas fa-edit"></i>
+                </span>
+                4. Dopasuj Ubranie
+              </p>
+              <p>
+                Dzięki naszej technologii sztucznej inteligencji, ubranie zostanie automatycznie dopasowane do wybranego modela. Możesz także edytować i dostosować położenie.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="cell" style="margin-bottom: 30px;">
+          <div class="card">
+            <div class="card-content" id="sprawdz">
+              <p class="title is-4">
+                <span class="icon">
+                  <i class="fas fa-share-alt"></i>
+                </span>
+                5. Podziel się Efektem
+              </p>
+              <p>
+                Gdy jesteś zadowolony z efektu, możesz podzielić się zdjęciem w mediach społecznościowych lub pobrać je na swoje urządzenie.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="cell"> 
+          <div class="card">
+            <div class="card-content" id="sprawdz">
+              <p class="title is-4">
+                <span class="icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+                6. Wystaw na Vinted
+              </p>
+              <p>
+                Jeżeli Twoje ubranie wygląda idealnie na modelu, przejdź na Vinted i wystaw je na sprzedaż bezpośrednio z aplikacji DressIT.
+              </p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!--Footer-->
-  <footer class="section">
+  <footer class="section" style="padding-top:0px;">
     <div class="container">
         <div class="pb-5 is-flex is-flex-wrap-wrap is-justify-content-between is-justify-content-right">
           <div>
