--- a/Onas.html
+++ b/Onas.html
@@ -8,7 +8,7 @@
       <meta name="author" content="Julia Fidecka, Katarzyna Adamska">
       <title>VearMe – Twój styl, Twoje zasady</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
       <link rel="icon" href="assets/VearMe.png" type="obraz/typ ikony">
       <style>
         #about-us ul {
@@ -51,6 +51,71 @@
         .title {
         animation: blink 2s infinite;
         }
+
+        /* ikonka serduszka */
+        .heart-icon {
+        transition: color 0.3s ease;
+        }
+
+        /* Kontener koszyka */
+      .cart-container {
+        position: absolute;
+        top: 60px; 
+        right: 20px;
+        background-color: rgb(255, 255, 255);
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        width: 300px;
+        display: none; 
+        z-index: 1000;
+        border-radius: 10px;
+      }
+
+      /* Dostosowanie dla mniejszych ekranów koszyk */
+      @media screen and (max-width: 768px) {
+        .cart-container {
+          width: 250px; 
+          right: 0px; 
+          top: 50px;   
+        }
+      }
+
+      /* Dostosowanie dla jeszcze mniejszych ekranów koszyk */
+      @media screen and (max-width: 480px) {
+        .cart-container {
+          width: 200px; 
+          right: 5px;  
+          top: 60px;   
+          padding: 15px; 
+        }
+      }
+
+
+      /* Zawartość koszyka */
+      .cart-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      /* Odstęp między elementami w koszyku */
+      #cart-items .cart-item {
+        margin-bottom: 15px; 
+        padding: 10px;
+        margin-top: 15px;
+        border-bottom: 1px solid #ddd; 
+      }
+
+      /* Suma w koszyku */
+      #cart-total {
+        margin-top: 20px;
+        text-align: center;
+      }
+
+      /* Wyświetla kontener koszyka */
+      #cart-container.show {
+        display: block; 
+      }
       </style>
     </head>
 <body>
@@ -91,11 +156,12 @@
                   </span>
                   <strong>Konto</strong>
                 </a>
-                <a class="button is-link" href="koszyk.html">
+                <a class="button is-link" id="show-cart">
                   <span class="icon is-small is-left">
                     <i class="fas fa-shopping-cart"></i>
                   </span>
                   <strong>Koszyk</strong>
+                  <span id="cart-count" class="badge" style="display:none;">(0)</span> <!-- Licznik produktów w nawiasach -->
                 </a>
               </div>
             </div>
@@ -103,6 +169,20 @@
       </div>
     </nav>
   </div>
+
+ <!-- Kontener koszyka (domyślnie ukryty) -->
+ <div id="cart-container" class="cart-container">
+  <div class="cart-header">
+    <h3 style="font-weight: bold;">Twój koszyk</h3>
+    <button id="close-cart" class="button is-small is-danger" style="font-weight: bold;">Zamknij</button>
+  </div>
+  <div id="cart-items">
+  </div>
+  <div id="cart-total">
+    <p style="margin-bottom:10px;"><b>Suma:</b> <span id="total-price">0 PLN</span></p>
+    <button id="go-to-cart" class="button is-primary" style="font-weight: bold;">Przejdź do koszyka</button>
+  </div>
+</div>
 
   <!--Blok kontakt-->
   <div class="columns has-background-light p-6">
@@ -166,14 +246,15 @@
       </div>
       <nav class="level is-mobile">
         <div class="level-left">
-          <a class="level-item">
-            <span class="icon is-small"><i class="fas fa-heart"></i></span>
+          <a class="level-item like-button">
+            <span class="icon is-small"><i class="fas fa-heart heart-icon"></i></span>
           </a>
+          <span class="like-count">0</span>
         </div>
       </nav>
     </div>
-  </article>
-  <article class="media">
+</article>
+  <article class="media pt-5">
     <figure class="media-left pl-5">
       <p class="image is-64x64">
         <img src="zdjecia_produktow/komentujaca2.jpg" />
@@ -189,15 +270,14 @@
       </div>
       <nav class="level is-mobile">
         <div class="level-left">
-          <a class="level-item">
-            <span class="icon is-small"><i class="fas fa-heart"></i></span>
+          <a class="level-item like-button">
+            <span class="icon is-small"><i class="fas fa-heart heart-icon"></i></span>
           </a>
+          <span class="like-count">0</span>
         </div>
       </nav>
     </div>
   </article>
-
-  
 
   <!--Footer-->
   <footer class="section">
@@ -232,12 +312,130 @@
 <!---toggles the class is-active on both the navbar-burger and the targeted navbar-menu-->
   <script src="toggle.js">
   </script>
-    <script>
-      //Dodanie alertu o niedziałającej zakładce konto
-      document.getElementById('zakladka-konto').addEventListener('click',function(){
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+  //Dodanie alertu o niedziałającej zakładce konto
+  document.getElementById('zakladka-konto').addEventListener('click',function(){
       alert("Zakładka jest jeszcze niedostępna");
     });
-    </script>
 
+//--------------------------------KOSZYK-------------------------------------
+$(document).ready(function() {
+  // Sprawdzanie czy w localStorage jest zapisany koszyk
+  let cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+  // Funkcja do aktualizacji widoku koszyka
+  function updateCartView() {
+    $('#cart-items').empty();
+    let totalPrice = 0;
+
+    cart.forEach((item, index) => {
+      $('#cart-items').append(`
+        <div class="cart-item">
+          <p>${item.name} - ${item.price} PLN
+          <button class="remove-from-cart button is-small " data-index="${index}"><i class="fa-solid fa-trash-can"></i></button></p>
+        </div>
+      `);
+      totalPrice += item.price;
+    });
+
+    $('#total-price').text(totalPrice + " PLN");
+    updateCartCount();
+  }
+
+  // Funkcja do zapisania koszyka do localStorage
+  function saveCartToLocalStorage() {
+    localStorage.setItem('cart', JSON.stringify(cart));
+  }
+
+  // Funkcja do aktualizacji licznika produktów w koszyku
+  function updateCartCount() {
+    const count = cart.length; 
+
+    if (count > 0) {
+      $('#cart-count').text(`(${count})`).show();  
+    } else {
+      $('#cart-count').hide(); 
+    }
+  }
+
+  // Funkcja do dodawania produktów do koszyka
+  $('.add-to-cart').on('click', function() {
+    const product = $(this).closest('.column').data();
+
+    // Dodanie produktu do koszyka
+    cart.push({
+      name: product.name,
+      price: parseFloat(product.price)
+    });
+
+    // Zaktualizowanie widoku koszyka
+    updateCartView();
+
+    // Zapisanie koszyka w localStorage
+    saveCartToLocalStorage();
+
+    // Wyświetlanie komunikatu, że produkt został dodany
+    const message = `Produkt ${product.name} został dodany do koszyka!`;
+    $('#cart-notification').text(message).fadeIn().delay(2000).fadeOut();
+  });
+
+  // Funkcja do usuwania produktów z koszyka
+  $(document).on('click', '.remove-from-cart', function() {
+    const index = $(this).data('index');
+    cart.splice(index, 1);
+
+    // Zaktualizowanie widoku koszyka
+    updateCartView();
+
+    // Zapisanie zaktualizowanego koszyka w localStorage
+    saveCartToLocalStorage();
+  });
+
+  // Pokazanie koszyka
+  $('#show-cart').on('click', function() {
+    $('#cart-container').toggleClass('show');
+  });
+
+  // Zamknięcie koszyka
+  $('#close-cart').on('click', function() {
+    $('#cart-container').removeClass('show');
+  });
+
+  // Funkcja "Przejdź do koszyka"
+  document.getElementById('go-to-cart').addEventListener('click',function(){
+    alert("Zakładka jest jeszcze niedostępna");
+  });
+  
+  // Inicjalizacja koszyka z localStorage
+  updateCartView();
+});
+
+//--------------------------------SERDUSZKA-------------------------------------
+// Dodajemy nasłuchiwacz do wszystkich serduszek na stronie
+const likeButtons = document.querySelectorAll('.like-button');
+
+likeButtons.forEach(button => {
+  button.addEventListener('click', function() {
+    const heartIcon = this.querySelector('.heart-icon');
+    const likeCount = this.nextElementSibling;
+
+    // Zmieniamy kolor serduszka na czerwony lub czarny
+    heartIcon.style.color = heartIcon.style.color === 'red' ? 'black' : 'red';
+
+    // Zwiększamy lub zmniejszamy licznik polubień
+    let count = parseInt(likeCount.textContent);
+    if (heartIcon.style.color === 'red') {
+        count++;  
+    } else {
+        count--;  
+    }
+
+    // Uaktualniamy wyświetlany licznik
+    likeCount.textContent = count;
+  });
+});
+</script>
 </body>
 </html>
