--- a/torebki.html
+++ b/torebki.html
@@ -271,7 +271,7 @@
         display: flex;
         flex-direction: column;  
         justify-content: flex-end; 
-        height: 18%;              
+        height: auto;            
     }
 
     /* Zmiana pozycji przycisku na mniejszych ekranach */
