--- a/obuwie.html
+++ b/obuwie.html
@@ -271,7 +271,7 @@
         display: flex;
         flex-direction: column;  
         justify-content: flex-end; 
-        height: 18%;              
+        height: auto;             
     }
 
     /* Zmiana pozycji przycisku na mniejszych ekranach */
@@ -411,7 +411,6 @@
           <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra naturalna</li>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra ekologiczna</li>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Tkanina</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Bawełna</li>
         </ul>
       </div>
       <div class="apply-button-container">
@@ -535,7 +534,7 @@
         </figure>
       </div>
     <!-- Produkt 7 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="7" data-name="Koronkowe granatowe szpilki" data-price="199.90" data-material="Bawełna" data-color="Niebieski">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="7" data-name="Koronkowe granatowe szpilki" data-price="199.90" data-material="Tkanina" data-color="Niebieski">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/koronkowe.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Koronkowe granatowe szpilki</figcaption>
