--- a/odziez.html
+++ b/odziez.html
@@ -271,7 +271,7 @@
         display: flex;
         flex-direction: column;  
         justify-content: flex-end; 
-        height: 18%;              
+        height: auto;              
     }
 
     /* Zmiana pozycji przycisku na mniejszych ekranach */
@@ -402,13 +402,9 @@
         <h5 class="subtitle is-5" style="font-weight: bold;">Materiał</h5>
         <ul>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Dzianina</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Poliester</li>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Satyna</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Len</li>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Tkanina</li>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra ekologiczna</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Jeans</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Bawełna</li>
         </ul>
       </div>
       <div class="apply-button-container">
@@ -442,7 +438,7 @@
         </figure>
       </div>
     <!-- Produkt 2 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="2" data-name="Brązowa marszczona bluzka" data-price="119.89" data-material="Poliester" data-color="Brązowy">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="2" data-name="Brązowa marszczona bluzka" data-price="119.89" data-material="Tkanina" data-color="Brązowy">
         <figure class="image is-160x160">
           <img class="is-rounded" src="zdjecia_produktow/bluzka3.jpg" alt="Odzież">
           <figcaption class="has-text-centered has-text-weight-bold">Marszczona bluzka</figcaption>
@@ -478,7 +474,7 @@
         </figure>
       </div>
     <!-- Produkt 4 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="4" data-name="Kremowa kamizelka" data-price="129.90" data-material="Len" data-color="Beżowy">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="4" data-name="Kremowa kamizelka" data-price="129.90" data-material="Tkanina" data-color="Beżowy">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/kamizelka.jpg" alt="Odzież">
           <figcaption class="has-text-centered has-text-weight-bold">Kremowa kamizelka</figcaption>
@@ -514,7 +510,7 @@
         </figure>
       </div>
     <!-- Produkt 6 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="6" data-name="Lniana narzutka" data-price="200.90" data-material="Len" data-color="Beżowy">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="6" data-name="Lniana narzutka" data-price="200.90" data-material="Tkanina" data-color="Beżowy">
         <figure class="image is-160x160">
           <img src="zdjecia_produktow/ponczo.jpg" alt="Odzież">
           <figcaption class="has-text-centered has-text-weight-bold">Narzutka</figcaption>
@@ -568,7 +564,7 @@
         </figure>
       </div>
     <!-- Produkt 9 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="9" data-name="Niebieskie skinny jeans" data-price="159.90" data-material="Jeans" data-color="Niebieski">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="9" data-name="Niebieskie skinny jeans" data-price="159.90" data-material="Tkanina" data-color="Niebieski">
         <figure class="image is-160x160">
           <img class="is-rounded" src="zdjecia_produktow/spodnie1.jpg" alt="Odzież">
           <figcaption class="has-text-centered has-text-weight-bold">Niebieskie skinny jeans</figcaption>
@@ -577,7 +573,7 @@
               <span class="icon"><i class="fas fa-plus"></i></span>
             </button>
             <p class="more-info" style="display: none;" class="is-size-5 has-text-grey-dark mt-3">
-              <b>Materiał:</b> Jeans + elastan
+              <b>Materiał:</b> Denim + elastan
               <br>
               <b>Cena:</b> 159.90 zł
             </p>
@@ -586,7 +582,7 @@
         </figure>
       </div>
     <!-- Produkt 10 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="10" data-name="Ciemnoszare spodnie wide leg" data-price="128.90" data-material="Bawełna" data-color="Szary">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="10" data-name="Ciemnoszare spodnie wide leg" data-price="128.90" data-material="Tkanina" data-color="Szary">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/spodnie2.jpg" alt="Odzież">
           <figcaption class="has-text-centered has-text-weight-bold">Ciemnoszare spodnie wide leg</figcaption>
@@ -604,7 +600,7 @@
         </figure>
       </div>
     <!-- Produkt 11 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="11" data-name="Sukienka mini z falbankami" data-price="119.90" data-material="Poliester" data-color="Niebieski">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="11" data-name="Sukienka mini z falbankami" data-price="119.90" data-material="Tkanina" data-color="Niebieski">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/sukieneczka.jpg" alt="Odzież">
           <figcaption class="has-text-centered has-text-weight-bold">Sukienka mini z falbankami</figcaption>
