--- a/torebki.html
+++ b/torebki.html
@@ -96,103 +96,126 @@
         display: block; 
       }
 
-      /* -------------------KONTENER PRODUKTÓW----------------------- */
-      /* Kontener produktów */
-      .columns {
-        display: flex;
-        flex-wrap: wrap;  
-        gap: 20px;       
-        justify-content: flex-start; 
-      }
+/* -------------------KONTENER PRODUKTÓW----------------------- */
+/* Kontener produktów */
+.columns {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; 
+  justify-content: flex-start;
+}
 
-      /* Pojedynczy produkt */
-      .column {
-        flex-basis: 31%;  
-        max-width: 31%;
-        margin-bottom: 20px;  
-      }
+/* Pojedynczy produkt */
+.column {
+  flex-basis: 23%;
+  max-width: 23%;
+  margin-bottom: 20px;
+}
 
-      /* Zmniejszenie szerokości produktów w przypadku mniejszych ekranów */
-      @media screen and (max-width: 768px) {
-        .column {
-          flex-basis: 48%;  
-          max-width: 48%;
-        }
-      }
+/* Jeśli są tylko dwa produkty, to będą wyświetlane obok siebie */
+.columns.is-two-products .column {
+  flex-basis: 48%;  
+  max-width: 48%;
+}
 
-      @media screen and (max-width: 480px) {
-        .column {
-          flex-basis: 100%; 
-          max-width: 100%;
-        }
-      }
+/* W przypadku mniejszych ekranów */
+@media screen and (max-width: 1024px) {
+  .column {
+    flex-basis: 31%; 
+    max-width: 31%;
+  }
+}
 
-      /* Ukrywanie produktów, które są niedostępne */
-      .product {
-        display: block;  
-      }
+@media screen and (max-width: 768px) {
+  .column {
+    flex-basis: 48%;  
+    max-width: 48%;
+  }
+}
 
-      /* Stylizacja dla układu 3 produktów w jednym rzędzie */
-      .columns.is-multiline {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 30px; 
-      }
+@media screen and (max-width: 480px) {
+  .column {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+}
 
-      .column.is-12-mobile.is-4-tablet {
-        flex-basis: 23%;
-        margin-bottom: 40px;
-        position: relative;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      }
+/* Ukrywanie produktów, które są niedostępne */
+.product {
+  display: block;
+}
 
-      .product-info {
-        margin-top: 10px;
-        text-align: center;
-      }
+/* Stylizacja dla układu 3 produktów w jednym rzędzie */
+.columns.is-multiline {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 30px;  
+}
 
-      .more-info {
-        margin-top: 10px;
-      }
+.column.is-12-mobile.is-4-tablet {
+  flex-basis: 23%;
+  margin-bottom: 40px;
+  position: relative;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+}
 
-      .add-to-cart {
-        margin-left: 28%; 
-        margin-top: 10px;
-        margin-bottom: 20px;
-      }
+/* Informacje o produkcie */
+.product-info {
+  margin-top: 10px;
+  text-align: center;
+}
 
-      .show-more {
-        margin-top: 10px;
-      }
+.more-info {
+  margin-top: 10px;
+}
 
-      /* Responsywność: Przekształcenie układu na mobilnych ekranach */
-      @media (max-width: 768px) {
-        .column.is-12-mobile.is-4-tablet {
-          flex-basis: 42%; 
-          margin-bottom: 0px; 
-        }
-        .column.is-12-mobile {
-          flex-basis: 100%; 
-          margin-bottom: 15px;
-        }
+.add-to-cart {
+  margin-left: 28%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 
-        .add-to-cart {
-          width: 80%; 
-          margin-top: 15px;
-          margin: 10px auto 20px; 
-        display: block; 
-        }
+.show-more {
+  margin-top: 10px;
+}
 
-        .show-more {
-          width: 80%; 
-        }
-        .add-to-cart {
-        margin: 10px auto 20px; 
-        display: block; 
-      }
-      }
+/* Responsywność: Przekształcenie układu na mobilnych ekranach */
+@media (max-width: 1390px) {
+  .column.is-12-mobile.is-4-tablet {
+    flex-basis: 42%;  
+    margin-bottom: 15px;
+  }
 
+  /* Stylizacja dla układu 3 produktów w jednym rzędzie */
+.columns.is-multiline {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  justify-content: space-between;
+  gap: 23px;  
+}
+  .column.is-12-mobile {
+    flex-basis: 100%;  
+    margin-bottom: 15px;
+  }
+
+  .add-to-cart {
+    width: 80%; 
+    margin-top: 15px;
+    margin: 10px auto 20px; 
+    display: block; 
+  }
+
+  .show-more {
+    width: 80%; 
+  }
+
+  .add-to-cart {
+    margin: 10px auto 20px; 
+    display: block; 
+  }
+}
       /* -------------------MODYFIKACJA FILTRÓW----------------------- */
       /* Modal - pozycjonowanie i tło */
       .modal {
@@ -271,7 +294,7 @@
         display: flex;
         flex-direction: column;  
         justify-content: flex-end; 
-        height: auto;            
+        height: auto;               
     }
 
     /* Zmiana pozycji przycisku na mniejszych ekranach */
@@ -812,14 +835,13 @@ document.querySelectorAll('.show-more').forEach(button => {
   });
 });
 
-// Funkcja do obsługi filtrowania
 function applyFilters() {
   const priceFilters = document.querySelectorAll('input[name="price"]:checked');
   const colorFilters = document.querySelectorAll('input[name="color"]:checked');
   const materialFilters = document.querySelectorAll('input[name="material"]:checked');
 
-  // Pobieranie wszystkich produktów
   const products = document.querySelectorAll('.column');
+  let visibleProducts = 0;
 
   products.forEach(product => {
     let showProduct = true;
@@ -835,7 +857,6 @@ function applyFilters() {
       if (priceRange === 'Powyżej 500 zł' && productPrice > 500) priceMatch = true;
     });
 
-    // Jeśli nie pasuje do żadnego zakresu cenowego, ukryj produkt
     if (!priceMatch && priceFilters.length > 0) {
       showProduct = false;
     }
@@ -850,7 +871,6 @@ function applyFilters() {
       }
     });
 
-    // Jeśli nie pasuje do wybranego koloru, ukryj produkt
     if (!colorMatch && colorFilters.length > 0) {
       showProduct = false;
     }
@@ -865,7 +885,6 @@ function applyFilters() {
       }
     });
 
-    // Jeśli nie pasuje do wybranego materiału, ukryj produkt
     if (!materialMatch && materialFilters.length > 0) {
       showProduct = false;
     }
@@ -873,11 +892,24 @@ function applyFilters() {
     // Pokaż/ukryj produkt
     if (showProduct) {
       product.style.display = '';
+      visibleProducts++;
     } else {
       product.style.display = 'none';
     }
   });
+
+  // Po przefiltrowaniu, jeśli widocznych jest 1 lub 2 produkty
+  const columnsContainer = document.querySelector('.columns');
+  
+  if (visibleProducts === 2) {
+    // Dodajemy klasę CSS, aby wymusić wyświetlanie produktów obok siebie
+    columnsContainer.classList.add('is-two-products');
+  } else {
+    // Jeśli produktów jest więcej niż 2, usuwamy tę klasę
+    columnsContainer.classList.remove('is-two-products');
+  }
 }
+
 </script>
 </body>
 </html>
